--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -58,12 +58,12 @@ jobs:
 
           df -h
 
-      - name: 涡轮增雕进程
-        run: |
-          cd package
-          mkdir openwrt-packages
-          cd openwrt-packages
-          git clone https://github.com/vernesong/OpenClash.git
+      #- name: 涡轮增雕进程
+      #  run: |
+      #    cd package
+      #    mkdir openwrt-packages
+      #    cd openwrt-packages
+      #    git clone https://github.com/vernesong/OpenClash.git
 
 
 
@@ -97,9 +97,9 @@ jobs:
           EOF
 
           # OpenClash设置：
-          cat >> .config <<EOF
-          CONFIG_PACKAGE_luci-app-openclash=y
-          EOF
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_luci-app-openclash=y
+          # EOF
 
           sed -i 's/^[ \t]*//g' ./.config
           make defconfig
