--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -58,12 +58,17 @@ jobs:
 
           df -h
 
-      #- name: 涡轮增雕进程
-      #  run: |
-      #    cd package
-      #    mkdir openwrt-packages
-      #    cd openwrt-packages
-      #    git clone https://github.com/vernesong/OpenClash.git
+      - name: 涡轮增雕进程
+        run: |
+
+          mkdir package/luci-app-openclash
+          cd package/luci-app-openclash
+          git init
+          git remote add -f origin https://github.com/vernesong/OpenClash.git
+          git config core.sparsecheckout true
+          echo "luci-app-openclash" >> .git/info/sparse-checkout
+          git pull origin master
+          git branch --set-upstream-to=origin/master master
 
 
 
@@ -97,9 +102,9 @@ jobs:
           EOF
 
           # OpenClash设置：
-          # cat >> .config <<EOF
-          # CONFIG_PACKAGE_luci-app-openclash=y
-          # EOF
+          cat >> .config <<EOF
+          CONFIG_PACKAGE_luci-app-openclash=y
+          EOF
 
           sed -i 's/^[ \t]*//g' ./.config
           make defconfig
