--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -60,15 +60,20 @@ jobs:
 
       - name: 涡轮增雕进程
         run: |
-
+          # Clone 项目
           mkdir package/luci-app-openclash
           cd package/luci-app-openclash
           git init
           git remote add -f origin https://github.com/vernesong/OpenClash.git
           git config core.sparsecheckout true
           echo "luci-app-openclash" >> .git/info/sparse-checkout
-          git pull origin master
+          git pull --depth 1 origin master
           git branch --set-upstream-to=origin/master master
+
+          # 编译 po2lmo (如果有po2lmo可跳过)
+          pushd luci-app-openclash/tools/po2lmo
+          make && sudo make install
+          popd
 
 
 
